@@ -62,7 +62,7 @@ prints the path of the user configuration directory and exits.
 enables additional command mode options in-game
 (see the wiki page at http://www.wesnoth.org/wiki/CommandMode for more information about command mode).
 .TP
-.B --dummylocales
+.B --dummy-locales
 use special dummy locales to switch to any language even if that language
 isn't installed system-wide.
 .TP
