@@ -1,5 +1,6 @@
 Version 1.5.6+svn:
  * Language and i18n:
+   * Renamed the --dummylocales parameter to --dummy-locales.
    * updated translations:
  * User interface:
    * Rewrote the layout algorithm for the new widgets.
